<resources>

    <!-- App -->
    <string name="app_name">DI Relay Sample</string>

    <!-- Common -->
    <string name="generic_failed_title">Failed</string>
    <string name="try_again">Try Again</string>
    <string name="learn_more">Learn More</string>
    <string name="sudos">Sudos</string>

    <!-- Register Fragment -->
    <string name="decentralized_identity_relay">Decentralized Identity Relay</string>
    <string name="sample_app">Sample App</string>
    <string name="registration_method">Registration Method</string>
    <string name="register_login">Register / Login</string>
    <string name="register_failure">Failed to register: %1$s</string>
    <string name="signin_failure">Failed to Sign In: %1$s</string>
    <string name="registration_keys_failure">Failed to load TEST registration keys: %1$s</string>
    <string name="test_registration">TEST Registration</string>
    <string name="federated_signin">Federated SignIn</string>
    <string name="safety_net_reg">SafetyNet Registration</string>
    <string name="reset">Reset</string>

    <!-- MainMenuFragment -->
    <string name="relay_doc_url" translatable="false">https://docs.sudoplatform.com/guides/decentralized-identity/relay-sdk</string>

    <!-- SudosFragment -->
    <string name="loading_sudos">Loading Sudos</string>
    <string name="deleting_sudos">Deleting Sudos&#8230;</string>
    <string name="activity_sudos">Sudos</string>
    <string name="list_sudos_failure">Failed to list Sudos</string>
    <string name="delete_sudo_failure">Failed to delete Sudo</string>
    <string name="what_is_a_sudo">What is a Sudo?</string>
    <string name="sudo_explanation">Relay Postboxes must belong to a Sudo. A Sudo is a digital identity created and owned by a real person</string>
    <string name="sudo_doc_url" translatable="false">https://docs.sudoplatform.com/concepts/sudo-digital-identities</string>

    <!-- CreateSudoFragment -->
    <string name="create_sudo_button">+ Create Sudo</string>
    <string name="create_sudo">Create Sudo</string>
    <string name="enter_sudo_name">Enter a name for your Sudo</string>
    <string name="success">Success</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="enter_sudo_label">Enter Sudo Label</string>
    <string name="choose_label_detail">Choose any label you would like for your Sudo: Shopping, Dating, etc.</string>
    <string name="creating_sudo">Creating Sudo&#8230;</string>
    <string name="create_sudo_learn_more">Relay Postboxes must belong to a Sudo. A Sudo is a digital identity created and owned by a real person.</string>
    <string name="create_sudo_doc_url" translatable="false">https://docs.sudoplatform.com/guides/sudos</string>

    <!-- Postboxes Fragment -->
    <string name="postbox_title">Postboxes</string>
    <string name="creating_postbox">Creating Postbox</string>
    <string name="create_postbox_button">+ Create Postbox</string>
    <string name="postbox_creation_failed">Failed to create postbox</string>
    <string name="delete_postbox_pending">Deleting Postbox</string>
    <string name="postbox_delete_failed">Failed to delete postbox</string>
    <string name="postbox_delete_success">Successfully deleted postbox</string>
    <string name="deregister">Deregister</string>
    <string name="sign_out">Sign Out</string>
    <string name="deregistering">Deregistering&#8230;</string>
    <string name="deregister_confirmation">Are you sure you want to deregister? All Postboxes and associated data will be deleted.</string>
    <string name="deregister_failure">Unable to deregister: %1$s</string>
    <string name="ownership_proof_error">Ownership proof cannot be found</string>
    <string name="fetch_postboxes_failure">Failed to fetch Sudo Postboxes</string>
    <string name="loading_postboxes">Loading Postboxes</string>

    <!-- Connection Start Fragment -->
    <string name="peer_connect_toolbar_title">Begin Peer Connection</string>
    <string name="create_invitation">Create an Invitation</string>
    <string name="accept_invitation">Scan an Invitation</string>
    <string name="connect_to_peer_title">Connect this postbox with a peer to continue. Please choose one of the following options.</string>

    <!-- Invite Fragment -->
    <string name="invite_toolbar_title">Invite a Peer</string>
    <string name="invite_title">Scan this invitation on another device sample app to initialize connection.</string>
    <string name="copy_invitation_prompt">OR, manually send your invitation to a peer:</string>
    <string name="invalid_response">Received Invalid Response</string>

    <!-- Scan Invitation Fragment -->
    <string name="scan_invitation_toolbar_title">Scan Invitation</string>
    <string name="scan_invitation_title">Scan an invitation from another device sample app to initialize connection.</string>
    <string name="enable_camera_prompt_title">Camera Permissions Denied</string>
    <string name="enable_camera_prompt">Please grant camera permissions for this sample app in your phone\'s settings in order to use the QR Code Scanner. Alternatively, you can manually enter an invitation code.</string>
    <string name="type_invitation_title">OR, manually enter the peer\'s invitation below:</string>
    <string name="enter_invitation_prompt">Enter Invitation…</string>
    <string name="invalid_invitation">Error Processing Invitation</string>
    <string name="connect_btn">Connect</string>

    <!-- Postbox Messages Fragment -->
    <string name="loading_messages">Loading Messages</string>
    <string name="postbox_messages_title">Relay Messages</string>
    <string name="list_relay_message_failed">Failed to get relay messages</string>
    <string name="subscription_failed">Failed to subscribe to relay events</string>
    <string name="enter_new_message">Enter message…</string>
    <string name="invalid_peer_connection_id_title">Invalid Input.</string>
    <string name="invalid_peer_connection_id">Invalid peer connection ID. This ID should be UUIDv4 formatted. Please try again.</string>
    <string name="post_message_failed">Message failed to send</string>

    <!-- Details Fragment -->
    <string name="details_toolbar_title">Connection Details</string>
    <string name="my_connectionID">My Connection ID</string>
    <string name="peer_connectionID">Peer Connection ID</string>
    <string name="my_http_endpoint">My HTTP Endpoint</string>
    <string name="peer_http_endpoint">Peer HTTP Endpoint</string>
    <string name="my_public_key">My Public Key</string>
    <string name="peer_public_key">Peer Public Key</string>
    <string name="error_retrieving_details">Error Processing Connection Details</string>

    <!-- Layout -->
    <string name="item_name">Item Name</string>
    <string name="placeholder">-</string>
    <string name="details">Details</string>
    <string name="date_placeholder">Date</string>
    <string name="create">Create</string>
    <string name="delete">Delete</string>

</resources>
