<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".postboxes.PostboxesFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/connectionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/my_connectionID"
                android:textColor="@android:color/primary_text_light" />

            <TextView
                android:id="@+id/connectionId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                tools:text="1234-1234-1234-1234" />

            <TextView
                android:id="@+id/peerConnectionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/peer_connectionID"
                android:textColor="@android:color/primary_text_light" />

            <TextView
                android:id="@+id/peerConnectionId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                tools:text="1234-1234-1234-1234" />

            <TextView
                android:id="@+id/postboxEndpointTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/my_http_endpoint"
                android:textColor="@android:color/primary_text_light" />

            <TextView
                android:id="@+id/postboxEndpoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                tools:text="http://example.com/1234-1234-1234-1234" />

            <TextView
                android:id="@+id/peerPostboxEndpointTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/peer_http_endpoint"
                android:textColor="@android:color/primary_text_light" />

            <TextView
                android:id="@+id/peerPostboxEndpoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                tools:text="http://example.com/1234-1234-1234-1234" />

            <TextView
                android:id="@+id/publicKeyTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/my_public_key"
                android:textColor="@android:color/primary_text_light" />

            <TextView
                android:id="@+id/publicKey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                tools:text="1234-1234-1234-1234-1234-1234-1234-1234-1234-1234-1234-1234-1234-1234-1234-1234-1234-1234-1234-1234-1234-1234-1234-1234-1234-1234-1234-1234" />

            <TextView
                android:id="@+id/peerPublicKeyTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/peer_public_key"
                android:textColor="@android:color/primary_text_light" />

            <TextView
                android:id="@+id/peerPublicKey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                tools:text="1234-1234-1234-1234-1234-1234-1234-1234-1234-1234-1234-1234-1234-1234-1234-1234-1234-1234-1234-1234-1234-1234-1234-1234-1234-1234-1234-1234" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
